# PytHHOn3D

./: README.md  TODO.md  notes.md  pyproject.toml  questions_nicolas.md
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
doc/: chapter_intro.tex  draft.tex  hho_chapter.tex  hho_handdoc.tex  notations.sty  pythhon3D.aux  pythhon3D.blg  pythhon3D.fdb_latexmk  pythhon3D.fls  pythhon3D.tex
drafts/: context.py  draft_timer.py
drafts/drafts_core/: draft_face2.py
drafts/drafts_quadrature/: draft_dunavant.py
drafts/drafts_shapes/: draft_polyhedron.py
meshes/: c1d2.geof  c1d2_1.geof  c1d2_10.geof  c1d2_11.geof  c1d2_12.geof  c1d2_15.geof  c1d2_2.geof  c1d2_25.geof  c1d2_30.geof  c1d2_35.geof  c1d2_45.geof  c1d2_5.geof  c1d2_60.geof  c1d2_65.geof  c1d2_8.geof  c1d2_80.geof  c1d2_85.geof  c1d2_90.geof  c1d2_95.geof  c2d3.geof  c2d3_hybrid.geof  c2d4.geof  c3d4.geof  c3d6.geof  c3d8.geof  mesh2D25.geof  squares.geof  squares_test.geof  test1D.geof  triangles.geof  triangles_test.geof
meshes/1D/: c1d2_100.geof  c1d2_104.geof  c1d2_13.geof  (+8 more)
pythhon3d/: __main__.py  draft_basis.py  draft_cell.py  draft_domain.py  draft_parser.py  draft_path_tester.py  pythhon3d.py
pythhon3d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_cases/: pythhon3d_1d0.py  pythhon3d_1d1.py  pythhon3d_1d2.py  pythhon3d_2d0.py  pythhon3d_2d1.py
tests/: test_basis.py  test_pythhon3d.py
trash/: draft_face.py  draft_problem.py  draft_problem_2D.py  draft_quadrature.py  face.py  geof_parser_2.py  quadrature.py  test_domain.py  test_face.py  test_quadrature.py
(+99 files in other folders)
